test/parser/fuzz.1.err
INVALID_TOKEN[1000] in test/parser/fuzz.1.pytch, line 1, character 9:
Error: Invalid token ''.
   +-------------------------------------+
   | test/parser/fuzz.1.pytch            |
 1 | let foo  print(1)                  |
   |         ^ Error: Invalid token ''. |
   +-------------------------------------+
UNEXPECTED_TOKEN[1001] in test/parser/fuzz.1.pytch, line 1, character 9:
Error: I was expecting a '=', but instead got the invalid token ''.
   +--------------------------------------------------------------------------------+
   | test/parser/fuzz.1.pytch                                                       |
 1 | let foo  print(1)                                                             |
   |         ^ Error: I was expecting a '=', but instead got the invalid token ''. |
   +--------------------------------------------------------------------------------+
